# norton-aifirst-intern-shakhzod

./: .cursorrules  .env.example  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.git-agent/: config.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/background/: analysis_foreground_task_handler.dart  background_work_coordinator.dart
lib/core/constants/: app_branding.dart
lib/core/env/: env.dart
lib/core/logging/: pipeline_log.dart  pipeline_log_entry.dart
lib/core/network/: dio_provider.dart  dio_provider.g.dart
lib/core/notifications/: app_notifications.dart
lib/core/routing/: app_router.dart  app_router.g.dart
lib/core/theme/: app_colors.dart  app_decorations.dart  app_durations.dart  app_radius.dart  app_sizes.dart  app_spacing.dart  app_text_styles.dart  app_theme.dart
lib/features/scam_detector/data/datasources/: anthropic_remote_datasource.dart  gemini_remote_datasource.dart  gemini_scam_analysis_config.dart  groq_remote_datasource.dart
lib/features/scam_detector/data/dtos/: scam_analysis_dto.dart  scam_analysis_dto.g.dart
lib/features/scam_detector/data/network/: osint_dio_factory.dart
lib/features/scam_detector/data/repositories/: abuse_ipdb_repository_impl.dart  eml_parse_repository_impl.dart  local_analysis_repository_impl.dart  model_repository_impl.dart  scam_analysis_repository_impl.dart  url_scan_repository_impl.dart  virus_total_repository_impl.dart
lib/features/scam_detector/data/services/: connectivity_service.dart  (+6 more)
lib/features/splash/presentation/: splash_screen.dart
test/: widget_test.dart
test/core/logging/: pipeline_log_test.dart
test/support/: mocks.dart  mocks.mocks.dart
tool/: setup_flutter_llama.ps1  setup_flutter_llama.sh
tool/patches/flutter_llama/: CMakeLists.txt  android_build.gradle
(+79 files in other folders)
